ARROW-4836: [C++] Support Tell() on compressed streams

This allows using them as a sink for IPC output.